--- a/src/App.css
+++ b/src/App.css
@@ -2,35 +2,11 @@
   text-align: center;
 }
 
-.buttonPrimary {
-  padding: 5px 12px;
-  outline: none;
-  border: solid 2px #ac64f0;
-  border-radius: 12px;
-  margin-left: 15px;
-  cursor: pointer;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1000px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.inputBox {
-  outline: none;
-  border: solid 1px #ac64f0;
-  padding: 5px 12px;
-}
-
 body {
+  padding: 25px;
+}
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
